# cedarkit-test-data

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
cedarkit_test_data/: __init__.py  __main__.py  cli.py
cedarkit_test_data/sources/: base.py
cedarkit_test_tool/: __init__.py  __main__.py  cli.py  downloader.py
cedarkit_test_tool/sources/: __init__.py  gfs.py
