[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cedarkit-test-data"
description = "Test data downloader for cedarkit toolkits"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Wang Dapeng", email="perillaroc@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "pandas>=1.5",
    "pyyaml>=6.0",
    "tqdm>=4.64",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
cedarkit-test-data = "cedarkit_test_data.cli:main"

[project.urls]
Homepage = "https://github.com/cemc-oper/cedarkit-test-data"

[tool.setuptools.packages.find]
where = ["."]
include = ["cedarkit_test_data*"]

[tool.setuptools_scm]
version_file = "cedarkit_test_data/_version.py"
